--- a/website/top/ytu/chem/index.htm
+++ b/website/top/ytu/chem/index.htm
@@ -1172,8 +1172,14 @@ function setHomepagea1067869a()
   });
 </script>
 
+<script>
+    if (window.location.href.indexOf("405") !== -1) {
+        window.location.href = "ssjgy.htm";
+    }
+</script>
 
     </body>
 
 </html>
+
 
