--- a/website/top/ytu/chem/cgbg/cgfzlc.htm
+++ b/website/top/ytu/chem/cgbg/cgfzlc.htm
@@ -157,7 +157,7 @@ function setHomepagea1067862a()
         return true;
     } 
 </script>
-<form action="ssjgy.htm" method="get" id="au3a" name="au3a" onsubmit="return _nl_ys_check1()" style="display: inline">
+<form action="../../ssjgy.htm" method="get" id="au3a" name="au3a" onsubmit="return _nl_ys_check1()" style="display: inline">
 <!-- 移除这些隐藏字段 -->
 <input type="text" name="q" id="showkeycode1067864" value="" placeholder="请输入关键词" class="text" autocomplete="off" />
 <input type="submit" value="" class="button" />
@@ -512,7 +512,7 @@ function setHomepagea1067869a()
         return true;
     } 
 </script>
-<form action="ssjgy.htm" method="get" id="au3a" name="au3a" onsubmit="return _nl_ys_check1()" style="display: inline">
+<form action="../../ssjgy.htm" method="get" id="au3a" name="au3a" onsubmit="return _nl_ys_check1()" style="display: inline">
 <!-- 移除这些隐藏字段 -->
 <input type="text" name="q" id="showkeycode1067864" value="" placeholder="请输入关键词" class="text" autocomplete="off" />
 <input type="submit" value="" class="button" />
@@ -850,4 +850,5 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
