--- a/website/top/ytu/chem/ssjgy.htm
+++ b/website/top/ytu/chem/ssjgy.htm
@@ -158,9 +158,9 @@ function setHomepagea1067862a()
     }
 </script>
 <form action="ssjgy.htm" method="get" id="au3a" name="au3a" onsubmit="return _nl_ys_check1()" style="display: inline">
-  <!-- 关键：name 保持为 q，这样 ssjgy.htm 用 ?q= 读取 -->
-  <input type="text" name="q" id="showkeycode1067864" value="" placeholder="请输入关键词" class="text" autocomplete="off" />
-  <input type="submit" value="" class="button" />
+<!-- 移除这些隐藏字段 -->
+<input type="text" name="q" id="showkeycode1067864" value="" placeholder="请输入关键词" class="text" autocomplete="off" />
+<input type="submit" value="" class="button" />
 </form>
 <script language="javascript" src="../system/resource/js/base64.js"></script><script language="javascript" src="../system/resource/js/formfunc.js"></script>
 </div>
@@ -513,9 +513,9 @@ function setHomepagea1067869a()
     }
 </script>
 <form action="ssjgy.htm" method="get" id="au3a" name="au3a" onsubmit="return _nl_ys_check1()" style="display: inline">
-  <!-- 关键：name 也用 q -->
-  <input type="text" placeholder="请输入关键词" name="q" id="showkeycode1067870" autocomplete="off">
-  <input type="image" src="img/fdj.png">
+<!-- 移除这些隐藏字段 -->
+<input type="text" name="q" id="showkeycode1067864" value="" placeholder="请输入关键词" class="text" autocomplete="off" />
+<input type="submit" value="" class="button" />
 </form>
 </div>
                 <ul class="clearfix"> <li>
@@ -919,6 +919,7 @@ function setHomepagea1067869a()
 
 </body>
 </html>
+
 
 
 
