--- a/website/top/ytu/chem/zywcr/sjq.htm
+++ b/website/top/ytu/chem/zywcr/sjq.htm
@@ -157,13 +157,10 @@ function setHomepagea1067862a()
         return true;
     } 
 </script>
-<form action="../ssjgy.htm?wbtreeid=1099" method="post" id="au3a" name="au3a" onsubmit="return _nl_ys_check()" style="display: inline">
- <input type="hidden" id="lucenenewssearchkey1067864" name="lucenenewssearchkey" value=""><input type="hidden" id="_lucenesearchtype1067864" name="_lucenesearchtype" value="1"><input type="hidden" id="searchScope1067864" name="searchScope" value="0">
- 
- <input type="text" name="showkeycode" id="showkeycode1067864" value="" placeholder="请输入关键词" class="text" autocomplete="off" />
-                        <input type="submit" value="" class="button" />
- 
-
+<form action="../ssjgy.htm" method="get" id="au3a" name="au3a" onsubmit="return _nl_ys_check1()" style="display: inline">
+<!-- 移除这些隐藏字段 -->
+<input type="text" name="q" id="showkeycode1067864" value="" placeholder="请输入关键词" class="text" autocomplete="off" />
+<input type="submit" value="" class="button" />
 </form><script language="javascript" src="../../system/resource/js/base64.js"></script><script language="javascript" src="../../system/resource/js/formfunc.js"></script>
 </div>
 
@@ -518,12 +515,10 @@ function setHomepagea1067869a()
         return true;
     } 
 </script>
-<form action="../ssjgy.htm?wbtreeid=1099" method="post" id="au7a" name="au7a" onsubmit="return _nl_ys_check1()" style="display: inline">
- <input type="hidden" id="lucenenewssearchkey1067870" name="lucenenewssearchkey" value=""><input type="hidden" id="_lucenesearchtype1067870" name="_lucenesearchtype" value="1"><input type="hidden" id="searchScope1067870" name="searchScope" value="0">
- 
- <input type="text" placeholder="请输入关键词" name="showkeycode" id="showkeycode1067870" autocomplete="off">
-                    <input type="image" src="../img/fdj.png">
-
+<form action="../ssjgy.htm" method="get" id="au3a" name="au3a" onsubmit="return _nl_ys_check1()" style="display: inline">
+<!-- 移除这些隐藏字段 -->
+<input type="text" name="q" id="showkeycode1067864" value="" placeholder="请输入关键词" class="text" autocomplete="off" />
+<input type="submit" value="" class="button" />
 </form>
 </div>
                 <ul class="clearfix"> <li>
@@ -880,3 +875,4 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
