--- a/website/top/ytu/chem/index.htm
+++ b/website/top/ytu/chem/index.htm
@@ -405,59 +405,38 @@ function setHomepagea1067862a()
                             <ul>
 
                                 <li>
-                                    <a href="zywcr/yjh.htm">于吉红</a>
+                                    <a href="zywcr/yjh.htm">毕毅</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/gyp.htm">郭玉鹏</a>
+                                    <a href="zywcr/gyp.htm">刘沙</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/fsh.htm">冯守华</a>
+                                    <a href="zywcr/fsh.htm">王爱萍</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/sjq.htm">孙俊奇</a>
+                                    <a href="zywcr/sjq.htm">张蓬</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/lzy.htm">吕中元</a>
+                                    <a href="zywcr/lzy.htm">赵妍</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/xjn.htm">徐家宁</a>
+                                    <a href="zywcr/xjn.htm">芦静</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/ly.htm">李乙</a>
+                                    <a href="zywcr/ly.htm">张竹红</a>
                                 </li>
-
-
-                                <li>
-                                    <a href="zywcr/szg.htm">宋志光</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="zywcr/yh.htm">杨桦</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="zywcr/wl.htm">王莉</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="zywcr/zyc.htm">朱燕超</a>
-                                </li>
-
                             </ul>
                         </div>
                     </li>
@@ -750,59 +729,38 @@ function setHomepagea1067869a()
                         <ul>
 
                             <li>
-                                <a href="zywcr/yjh.htm">于吉红</a>
+                                <a href="zywcr/yjh.htm">毕毅</a>
                             </li>
 
 
                             <li>
-                                <a href="zywcr/gyp.htm">郭玉鹏</a>
+                                <a href="zywcr/gyp.htm">刘沙</a>
                             </li>
 
 
                             <li>
-                                <a href="zywcr/fsh.htm">冯守华</a>
+                                <a href="zywcr/fsh.htm">王爱萍</a>
                             </li>
 
 
                             <li>
-                                <a href="zywcr/sjq.htm">孙俊奇</a>
+                                <a href="zywcr/sjq.htm">张蓬</a>
                             </li>
 
 
                             <li>
-                                <a href="zywcr/lzy.htm">吕中元</a>
+                                <a href="zywcr/lzy.htm">赵妍</a>
                             </li>
 
 
                             <li>
-                                <a href="zywcr/xjn.htm">徐家宁</a>
+                                <a href="zywcr/xjn.htm">芦静</a>
                             </li>
 
 
                             <li>
-                                <a href="zywcr/ly.htm">李乙</a>
+                                <a href="zywcr/ly.htm">张竹红</a>
                             </li>
-
-
-                            <li>
-                                <a href="zywcr/szg.htm">宋志光</a>
-                            </li>
-
-
-                            <li>
-                                <a href="zywcr/yh.htm">杨桦</a>
-                            </li>
-
-
-                            <li>
-                                <a href="zywcr/wl.htm">王莉</a>
-                            </li>
-
-
-                            <li>
-                                <a href="zywcr/zyc.htm">朱燕超</a>
-                            </li>
-
                         </ul>
                     </li>
 
@@ -1171,6 +1129,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
