--- a/website/top/ytu/chem/cgbg/cgfzlc.htm
+++ b/website/top/ytu/chem/cgbg/cgfzlc.htm
@@ -336,17 +336,17 @@ function setHomepagea1067862a()
                             <ul>
 
                                 <li>
-                                    <a href="zywcr/yjh.htm">毕毅</a>
+                                    <a href="../zywcr/yjh.htm">毕毅</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/gyp.htm">刘沙</a>
+                                    <a href="../zywcr/gyp.htm">刘沙</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/fsh.htm">王爱萍</a>
+                                    <a href="../zywcr/fsh.htm">王爱萍</a>
                                 </li>
 
 
@@ -361,12 +361,12 @@ function setHomepagea1067862a()
 
 
                                 <li>
-                                    <a href="zywcr/xjn.htm">芦静</a>
+                                    <a href="../zywcr/xjn.htm">芦静</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/ly.htm">张竹红</a>
+                                    <a href="../zywcr/ly.htm">张竹红</a>
                                 </li>
   
                             </ul>
@@ -810,6 +810,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
