--- a/website/top/ytu/chem/sbs/zywcrqk.htm
+++ b/website/top/ytu/chem/sbs/zywcrqk.htm
@@ -338,37 +338,37 @@ function setHomepagea1067862a()
                             <ul>
 
                                 <li>
-                                    <a href="zywcr/yjh.htm">毕毅</a>
+                                    <a href="../zywcr/yjh.htm">毕毅</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/gyp.htm">刘沙</a>
+                                    <a href="../zywcr/gyp.htm">刘沙</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/fsh.htm">王爱萍</a>
+                                    <a href="../zywcr/fsh.htm">王爱萍</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/sjq.htm">张蓬</a>
+                                    <a href="../zywcr/sjq.htm">张蓬</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/lzy.htm">赵妍</a>
+                                    <a href="../zywcr/lzy.htm">赵妍</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/xjn.htm">芦静</a>
+                                    <a href="../zywcr/xjn.htm">芦静</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/ly.htm">张竹红</a>
+                                    <a href="../zywcr/ly.htm">张竹红</a>
                                 </li>
   
                             </ul>
@@ -664,37 +664,37 @@ function setHomepagea1067869a()
                         <ul>
 
                                 <li>
-                                    <a href="zywcr/yjh.htm">毕毅</a>
+                                    <a href="../zywcr/yjh.htm">毕毅</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/gyp.htm">刘沙</a>
+                                    <a href="../zywcr/gyp.htm">刘沙</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/fsh.htm">王爱萍</a>
+                                    <a href="../zywcr/fsh.htm">王爱萍</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/sjq.htm">张蓬</a>
+                                    <a href="../zywcr/sjq.htm">张蓬</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/lzy.htm">赵妍</a>
+                                    <a href="../zywcr/lzy.htm">赵妍</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/xjn.htm">芦静</a>
+                                    <a href="../zywcr/xjn.htm">芦静</a>
                                 </li>
 
 
                                 <li>
-                                    <a href="zywcr/ly.htm">张竹红</a>
+                                    <a href="../zywcr/ly.htm">张竹红</a>
                                 </li>
                          
                         </ul>
@@ -830,5 +830,6 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
