--- a/website/top/ytu/chem/zywcr/yjh.htm
+++ b/website/top/ytu/chem/zywcr/yjh.htm
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui:ios">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>于吉红-校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践</title><META Name="keywords" Content="校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践,于吉红" />
+        <title>毕毅-校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践</title><META Name="keywords" Content="校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践,毕毅" />
 
         <link rel="stylesheet" href="../css/slick.css">
         <link rel="stylesheet" href="../css/slick-theme.css">
@@ -822,6 +822,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
