--- a/website/top/ytu/chem/zywcr/gyp.htm
+++ b/website/top/ytu/chem/zywcr/gyp.htm
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui:ios">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>郭玉鹏-校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践</title><META Name="keywords" Content="校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践,郭玉鹏" />
+        <title>刘沙-校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践</title><META Name="keywords" Content="校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践,刘沙" />
 
         <link rel="stylesheet" href="../css/slick.css">
         <link rel="stylesheet" href="../css/slick-theme.css">
@@ -718,7 +718,7 @@ function setHomepagea1067869a()
               <span>-></span>
                 <a href="yjh.htm">主要完成人</a>
               <span>-></span>
-                <a href="gyp.htm">郭玉鹏</a>
+                <a href="gyp.htm">刘沙</a>
 </div>
                 </div>
                 <div class="channl-menu leftNav">
@@ -728,37 +728,25 @@ function setHomepagea1067869a()
 
 主要完成人</h2>
                     <ul>   <li>
-                            <a href="yjh.htm">于吉红</a>
+                            <a href="yjh.htm">毕毅</a>
                         </li>
    <li class="active on">
-                            <a href="gyp.htm">郭玉鹏</a>
+                            <a href="gyp.htm">刘沙</a>
                         </li>
    <li>
-                            <a href="fsh.htm">冯守华</a>
+                            <a href="fsh.htm">王爱萍</a>
                         </li>
    <li>
-                            <a href="sjq.htm">孙俊奇</a>
+                            <a href="sjq.htm">张蓬</a>
                         </li>
    <li>
-                            <a href="lzy.htm">吕中元</a>
+                            <a href="lzy.htm">赵妍</a>
                         </li>
    <li>
-                            <a href="xjn.htm">徐家宁</a>
+                            <a href="xjn.htm">芦静</a>
                         </li>
    <li>
-                            <a href="ly.htm">李乙</a>
-                        </li>
-   <li>
-                            <a href="szg.htm">宋志光</a>
-                        </li>
-   <li>
-                            <a href="yh.htm">杨桦</a>
-                        </li>
-   <li>
-                            <a href="wl.htm">王莉</a>
-                        </li>
-   <li>
-                            <a href="zyc.htm">朱燕超</a>
+                            <a href="ly.htm">张竹红</a>
                         </li>
 </ul>
                 </div>
@@ -769,7 +757,7 @@ function setHomepagea1067869a()
 
 
 
-郭玉鹏</h3>
+刘沙</h3>
                         </div>
                     </div>
                     <div class="art-main">
@@ -834,6 +822,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
