--- a/website/top/ytu/chem/zywcr/gyp.htm
+++ b/website/top/ytu/chem/zywcr/gyp.htm
@@ -768,7 +768,7 @@ function setHomepagea1067869a()
 <script>function seeContenta13(contentid,size,displayid){	document.getElementById(contentid).innerHTML = '[';	for(var i=0;i<=size;i++){		var allcontentid = contentid+(i+1);		if(allcontentid==displayid){			document.getElementById(contentid).innerHTML += " <span id='"+allcontentid+"' name='"+allcontentid+"'  >"+(i+1)+"</span> ";			document.getElementById(displayid).style.display = 'block';		}else{			document.getElementById(contentid).innerHTML += " <span style='cursor:pointer' id='"+allcontentid+"' name='"+allcontentid+"' onclick=seeContenta13('"+contentid+"','"+size+"','"+allcontentid+"')  >"+(i+1)+"</span> ";			document.getElementById(allcontentid).style.display = 'none';		}	}	document.getElementById(contentid).innerHTML += ']';}</script>
 
 <iframe
-  src="../../_local/zywcr/luodihong-shenbo-jianli.pdf"
+  src="../../_local/zywcr/2liusha.pdf"
   width="100%"
   height="600"
   style="border:1px solid #DDDDDD"
@@ -822,6 +822,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
