--- a/website/top/ytu/chem/zywcr/lzy.htm
+++ b/website/top/ytu/chem/zywcr/lzy.htm
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui:ios">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>吕中元-校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践</title><META Name="keywords" Content="校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践,吕中元" />
+        <title>赵妍-校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践</title><META Name="keywords" Content="校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践,赵妍" />
 
         <link rel="stylesheet" href="../css/slick.css">
         <link rel="stylesheet" href="../css/slick-theme.css">
@@ -718,7 +718,7 @@ function setHomepagea1067869a()
               <span>-></span>
                 <a href="yjh.htm">主要完成人</a>
               <span>-></span>
-                <a href="lzy.htm">吕中元</a>
+                <a href="lzy.htm">赵妍</a>
 </div>
                 </div>
                 <div class="channl-menu leftNav">
@@ -768,9 +768,7 @@ function setHomepagea1067869a()
                         <div class="clearfix">
                             <h3>
 
-
-
-吕中元</h3>
+赵妍</h3>
                         </div>
                     </div>
                     <div class="art-main">
@@ -781,7 +779,7 @@ function setHomepagea1067869a()
 <script>function seeContenta13(contentid,size,displayid){	document.getElementById(contentid).innerHTML = '[';	for(var i=0;i<=size;i++){		var allcontentid = contentid+(i+1);		if(allcontentid==displayid){			document.getElementById(contentid).innerHTML += " <span id='"+allcontentid+"' name='"+allcontentid+"'  >"+(i+1)+"</span> ";			document.getElementById(displayid).style.display = 'block';		}else{			document.getElementById(contentid).innerHTML += " <span style='cursor:pointer' id='"+allcontentid+"' name='"+allcontentid+"' onclick=seeContenta13('"+contentid+"','"+size+"','"+allcontentid+"')  >"+(i+1)+"</span> ";			document.getElementById(allcontentid).style.display = 'none';		}	}	document.getElementById(contentid).innerHTML += ']';}</script>
 
 <iframe
-  src="../../_local/zywcr/luodihong-shenbo-jianli.pdf"
+  src="../../_local/zywcr/5zhoyan.pdf"
   width="100%"
   height="600"
   style="border:1px solid #DDDDDD"
@@ -835,6 +833,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
