--- a/website/top/ytu/chem/zywcr/lzy.htm
+++ b/website/top/ytu/chem/zywcr/lzy.htm
@@ -727,40 +727,27 @@ function setHomepagea1067869a()
 
 
 主要完成人</h2>
-                    <ul>                                  
-                                <li>
-                                 <a href="zywcr/yjh.htm">毕毅</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="zywcr/gyp.htm">刘沙</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="zywcr/fsh.htm">王爱萍</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="zywcr/sjq.htm">张蓬</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="zywcr/lzy.htm">赵妍</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="zywcr/xjn.htm">芦静</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="zywcr/ly.htm">张竹红</a>
-                                </li>
+                    <ul>   <li>
+                            <a href="yjh.htm">毕毅</a>
+                        </li>
+   <li>
+                            <a href="gyp.htm">刘沙</a>
+                        </li>
+   <li>
+                            <a href="fsh.htm">王爱萍</a>
+                        </li>
+   <li>
+                            <a href="sjq.htm">张蓬</a>
+                        </li>
+   <li class="active on">
+                            <a href="lzy.htm">赵妍</a>
+                        </li>
+   <li>
+                            <a href="xjn.htm">芦静</a>
+                        </li>
+   <li>
+                            <a href="ly.htm">张竹红</a>
+                        </li>
 </ul>
                 </div>
                 <div class="ny-right">
@@ -833,6 +820,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
