--- a/website/top/ytu/chem/zywcr/xjn.htm
+++ b/website/top/ytu/chem/zywcr/xjn.htm
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui:ios">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>徐家宁-校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践</title><META Name="keywords" Content="校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践,徐家宁" />
+        <title>芦静-校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践</title><META Name="keywords" Content="校企共建、产教共生驱动《药学前沿》研究生课程立体化建设的创新与实践,芦静" />
 
         <link rel="stylesheet" href="../css/slick.css">
         <link rel="stylesheet" href="../css/slick-theme.css">
@@ -717,7 +717,7 @@ function setHomepagea1067869a()
               <span>-></span>
                 <a href="yjh.htm">主要完成人</a>
               <span>-></span>
-                <a href="xjn.htm">徐家宁</a>
+                <a href="xjn.htm">芦静</a>
 </div>
                 </div>
                 <div class="channl-menu leftNav">
@@ -767,7 +767,7 @@ function setHomepagea1067869a()
 
 
 
-徐家宁</h3>
+芦静</h3>
                         </div>
                     </div>
                     <div class="art-main">
@@ -832,6 +832,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
