--- a/website/top/ytu/chem/zywcr/xjn.htm
+++ b/website/top/ytu/chem/zywcr/xjn.htm
@@ -726,39 +726,28 @@ function setHomepagea1067869a()
 
 
 主要完成人</h2>
-                    <ul>                                   <li>
-                                    <a href="yjh.htm">毕毅</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="gyp.htm">刘沙</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="fsh.htm">王爱萍</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="sjq.htm">张蓬</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="lzy.htm">赵妍</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="xjn.htm">芦静</a>
-                                </li>
-
-
-                                <li>
-                                    <a href="ly.htm">张竹红</a>
-                                </li>
+                    <ul>   <li>
+                            <a href="yjh.htm">毕毅</a>
+                        </li>
+   <li>
+                            <a href="gyp.htm">刘沙</a>
+                        </li>
+   <li>
+                            <a href="fsh.htm">王爱萍</a>
+                        </li>
+   <li>
+                            <a href="sjq.htm">张蓬</a>
+                        </li>
+   <li>
+                            <a href="lzy.htm">赵妍</a>
+                        </li>
+   <li class="active on">
+                            <a href="xjn.htm">芦静</a>
+                        </li>
+   <li>
+                            <a href="ly.htm">张竹红</a>
+                        </li>
+</ul>
                 </div>
                 <div class="ny-right">
                     <div class="position">
@@ -778,7 +767,7 @@ function setHomepagea1067869a()
 <script>function seeContenta13(contentid,size,displayid){	document.getElementById(contentid).innerHTML = '[';	for(var i=0;i<=size;i++){		var allcontentid = contentid+(i+1);		if(allcontentid==displayid){			document.getElementById(contentid).innerHTML += " <span id='"+allcontentid+"' name='"+allcontentid+"'  >"+(i+1)+"</span> ";			document.getElementById(displayid).style.display = 'block';		}else{			document.getElementById(contentid).innerHTML += " <span style='cursor:pointer' id='"+allcontentid+"' name='"+allcontentid+"' onclick=seeContenta13('"+contentid+"','"+size+"','"+allcontentid+"')  >"+(i+1)+"</span> ";			document.getElementById(allcontentid).style.display = 'none';		}	}	document.getElementById(contentid).innerHTML += ']';}</script>
 
 <iframe
-  src="../../_local/zywcr/luodihong-shenbo-jianli.pdf"
+  src="../../_local/zywcr/6lujing.pdf"
   width="100%"
   height="600"
   style="border:1px solid #DDDDDD"
@@ -832,6 +821,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
