--- a/website/top/ytu/chem/sbs/cgchjlqk.htm
+++ b/website/top/ytu/chem/sbs/cgchjlqk.htm
@@ -777,7 +777,14 @@ function setHomepagea1067869a()
                         <div class="art-body">
     <div id="vsb_content_1054_u131"><div id="vsb_content"><div align="center">
 
-</div>
+<iframe
+  src="../_local/sbs/1成果曾获奖情况.pdf"
+  width="100%"
+  height="600"
+  style="border:1px solid #DDDDDD"
+  loading="lazy"
+  referrerpolicy="no-referrer">
+</iframe>
 <p><br></p></div></div>
     <span id="vsb_content_1054_u13" name="vsb_content_1054_u13"></span><br /><br />
     
@@ -825,6 +832,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
