--- a/website/top/ytu/chem/sbs/cgchjlqk.htm
+++ b/website/top/ytu/chem/sbs/cgchjlqk.htm
@@ -778,7 +778,7 @@ function setHomepagea1067869a()
     <div id="vsb_content_1054_u131"><div id="vsb_content"><div align="center">
 
 <iframe
-  src="../_local/sbs/1成果曾获奖励情况.pdf"
+  src="../../_local/sbs/1成果曾获奖励情况.pdf"
   width="100%"
   height="600"
   style="border:1px solid #DDDDDD"
@@ -832,6 +832,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
