--- a/website/top/ytu/chem/sbs/cgdcxd.htm
+++ b/website/top/ytu/chem/sbs/cgdcxd.htm
@@ -768,7 +768,14 @@ function setHomepagea1067869a()
                         </div>
                         <div class="art-body">
     <div id="vsb_content_1058_u131"><div id="vsb_content"><p style="text-align:left;line-height:39px"><br></p>
-
+<iframe
+  src="../../_local/sbs/4成果的创新点.pdf"
+  width="100%"
+  height="600"
+  style="border:1px solid #DDDDDD"
+  loading="lazy"
+  referrerpolicy="no-referrer">
+</iframe>
 <p><br></p></div></div>
     <span id="vsb_content_1058_u13" name="vsb_content_1058_u13"></span><br /><br />
     
@@ -816,6 +823,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
