--- a/website/top/ytu/chem/sbs/cgdtgyyxg.htm
+++ b/website/top/ytu/chem/sbs/cgdtgyyxg.htm
@@ -775,13 +775,15 @@ function setHomepagea1067869a()
                             <h3>成果的推广应用效果</h3>
                         </div>
                         <div class="art-body">
-    <div id="vsb_content_1059_u131"><div id="vsb_content"><p style="text-align:left;line-height:27px"><span style="font-size:16px;font-family:宋体;color:black">成果的推广应用效果</span></p>
-<p style="text-align:left;margin-top:8px;margin-right:7px;margin-bottom:0;margin-left:0;margin-bottom:0;text-indent:38px;line-height:28px"><strong><span style="font-size:19px;font-family:宋体">（</span></strong><strong><span lang="EN-US" style="font-size:19px">1</span></strong><strong><span style="font-size:19px;font-family:宋体">）</span></strong><strong><span style="font-size:16px;font-family: 宋体;color:black">学生创新能力显著增强</span></strong></p>
-<p style="text-align:left;margin-top:8px;margin-right:7px;margin-bottom:0;margin-left:0;margin-bottom:0;text-indent:32px;line-height:28px"><span style="font-size:16px;font-family: 宋体;color:black">成果完成与实践期间，获得省级及以上化学类竞赛奖<span lang="EN-US">50</span>项，其中国际大赛<span lang="EN-US">Biomod</span>、<span lang="EN-US">iGEM</span>金奖<span lang="EN-US">3</span>项（团队），银奖<span lang="EN-US">2</span>项（团队）；全国大学生化学实验创新设计大赛、全国大学生化学实验邀请赛等国家级竞赛特等奖<span lang="EN-US">3</span>项，一等奖<span lang="EN-US">4</span>项，二等奖<span lang="EN-US">6</span>项；在读本科生以第一作者身份发表<span lang="EN-US">SCI</span>检索学术论文<span lang="EN-US">31</span>篇。毕业的本科生以第一作者身份在顶级期刊《<span lang="EN-US">Nature</span>》和《<span lang="EN-US">Science</span>》发表论文<span lang="EN-US">5</span>篇，广泛就职于科技部、工信部等各级政府职能部门，中科院等科研院校，中石化、华为等企事业单位。<span lang="EN-US">20</span>年来，培养的本科生已有<span lang="EN-US">15</span>人入选国家级领军人才，<span lang="EN-US">32</span>人入选国家级青年人才。</span></p>
-<p style="text-align:left;margin-top:8px;margin-right:7px;margin-bottom:0;margin-left:0;margin-bottom:0;text-indent:38px;line-height:28px"><strong><span style="font-size:19px;font-family:宋体">（</span></strong><strong><span lang="EN-US" style="font-size:19px">2</span></strong><strong><span style="font-size:19px;font-family:宋体">）</span></strong><strong><span style="font-size:16px;font-family: 宋体;color:black">教师育人水平普遍提高</span></strong></p>
-<p style="text-align:left;margin-top:8px;margin-right:7px;margin-bottom:0;margin-left:0;margin-bottom:0;text-indent:32px;line-height:28px"><span style="font-size:16px;font-family: 宋体;color:black">成果实施期间，学院的学科优势持续转化为教学优势，<span lang="EN-US">1</span>个团队获评首批“全国黄大年式教师团队”；获评全国模范教师<span lang="EN-US">1</span>人、国家教学名师<span lang="EN-US">1</span>人，省级教学名师<span lang="EN-US">2</span>人和宝钢优秀教师<span lang="EN-US">2</span>人；出版质量高、影响大的理论和实验教材<span lang="EN-US">33</span>本，其中国家级规划教材<span lang="EN-US">5</span>套，“《无机化学》第四版”荣获全国优秀教材二等奖；教学团队获得省级及以上教学相关奖励<span lang="EN-US">23</span>项，“无机化学”“物理化学”“化学基础和综合实验”等<span lang="EN-US">7</span>门课程获评国家级精品课、精品资源共享课、国家一流课程；化学等<span lang="EN-US">4</span>个专业获评国家一流专业。“新形态”教学模式下，打造“无机化学”线上线下混合式国家一流课程和“结构化学”晶体教学虚拟仿真教学系统，云端教学保障力强。协同育人成果获评教育部《读懂中国》微视频制作一等奖、吉林省高校校园文化建设成果奖。</span></p>
-<p style="text-align:left;margin-top:8px;margin-right:7px;margin-bottom:0;margin-left:0;margin-bottom:0;text-indent:38px;line-height:28px"><strong><span style="font-size:19px;font-family:宋体">（</span></strong><strong><span lang="EN-US" style="font-size:19px">3</span></strong><strong><span style="font-size:19px;font-family:宋体">）</span></strong><strong><span style="font-size:16px;font-family: 宋体;color:black">示范引领作用日益显现</span></strong></p>
-<p style="text-align:left;margin-top:8px;margin-right:7px;margin-bottom:0;margin-left:0;margin-bottom:0;text-indent:32px;line-height:28px"><span style="font-size:16px;font-family: 宋体;color:black">成果完成及实践期间，打造的人才培养模式已在吉林大学<span lang="EN-US">70</span>余个专业、每年万余名学生的理论和实验教学中得到应用，学院成功获批国家拔尖计划<span lang="EN-US">2.0</span>化学基地的召集单位。自<span lang="EN-US">2013</span>年以来，团队成员在教育部高教司、教育部化学课程教指委、国内高端化学论坛等教学研讨活动中，围绕人才培养模式、基地建设、课程建设、教材建设等方面，受邀作报告、经验介绍<span lang="EN-US">35</span>场次；布里斯托大学、北京大学等<span lang="EN-US">100</span>余所学校<span lang="EN-US">1000</span>余名师生来校交流。目前，吉林大学化学学科的人才培养和教师队伍建设模式已被包括上海交通大学、中山大学等<span lang="EN-US">12</span>所高校广泛借鉴，被中央电视台、中国教育新闻网等主流媒体广泛报道。成果不仅是对吉大化学学科人才培养模式的传承与创新，更是对新时代高校基础学科人才培养提供重要的指导和借鉴意义。</span></p>
+    <div id="vsb_content_1059_u131"><div id="vsb_content"><p style="text-align:left;line-height:27px">
+<iframe
+  src="../../_local/sbs/5成果的推广应用效果.pdf"
+  width="100%"
+  height="600"
+  style="border:1px solid #DDDDDD"
+  loading="lazy"
+  referrerpolicy="no-referrer">
+</iframe>
 <p><br></p></div></div>
     <span id="vsb_content_1059_u13" name="vsb_content_1059_u13"></span><br /><br />
     
@@ -829,6 +831,7 @@ function setHomepagea1067869a()
     </body>
 
 </html>
+
 
 
 
